# label-tracker

./: Cargo.toml  README.md  api.nix  default.nix  fetcher.nix  flake.nix  label-tracker.nix  module.nix  result  util.nix
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/tests/: test.rs
fetcher/: Cargo.toml
fetcher/src/: github.rs  lib.rs  repo.rs
fetcher/src/queries/: branch_contains.graphql  pulls.graphql
fetcher/tests/: test.rs
src/: full_matchable_regex.rs  github.rs  issues.graphql  main.rs  pulls.graphql  state.rs  types.rs
store/: Cargo.toml
store/.sqlx/: query-1370cf731997562aee888031273efd34382d7d80195ce0e09c8711d517be216c.json  query-1f7b1262e41e91b421b62ae4610dfec7a83a930ac1b9eb99b871a0dd2ba3f383.json  query-2bfc7c5ae93e196c7911182970bc36dcb2b906317c6f116b0bb672f633bcc599.json  query-3a96111eea1a816a71af9cd8347119af5b05575f8e46d2fa11adf8d18f483ff8.json  query-48afdf0901e6c0e8b7b25fde59660b5f919849b1a947070d16753408fddc4fb3.json  query-5b54cbe027d96497462025505564c9f59bf17f62db45415708accf17ecf156c4.json  query-6d6416013f8b4e500d045e68ef7c27218d941de204298975aa8840cab0ec81c1.json  query-7c5ca99378d9c1bfe4a2fd80a45676877c96c224deb88fbad05841f4f743ca83.json  query-8fa07be29bdc0bae0da5ca3c1f7a0e3ca4c1d648c284055cf9add775bb4596db.json  query-99889e0a9c5243b524d9d3d68159f6845ac3518ac32e21965495826e0be5a865.json  query-9cea040bfbd8f6c64c3be67da1b4ee95efffe7d1e4d4c121a474ad1d70fbd1d1.json  query-9d23104c8c454358f08f396ddbf944c2d83a94ddb281f7b51387b248c8b05048.json  query-ad0b9c23dafc41969ab4b7f33ca8c1ae2dd42d673e55133157503b7442fb9c59.json  query-c66f5ef96adec5a67131a2cfbc3ad5ed2b6ac9d96659c3849e4303bc3425058d.json  query-d71042a936a58d3db38aaf8b91c4350acf6dfd20e47e62a4d64a596fecfdb2be.json  query-ef19d6f7b405ffb84ae9903f1b1aef96be748c3b9036bf7a7509722722a7c08a.json  query-fa798337d9a94eb592dcc7078b81c8e7d8d5e5de488c483bd60a8c93793b3898.json  query-fa977601536bc1347e829fb810520b6c23392b672e1d57e24feabdd28a26be1d.json
store/migrations/: 20231129080318_initial.sql
store/src/: lib.rs
tests/: test.rs
util/: Cargo.toml
util/migrations/: 20231129080318_initial.sql
util/src/: lib.rs
