[workspace]
members = ["fetcher", "api", "store", "util"]

[package]
name = "label-tracker"
description = "track github issues and pull requests by their labels"
version = "0.1.1"
edition = "2021"
repository = "https://git.eno.space/label-tracker.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.19", default-features = false, features = [ "clock", "serde" ] }
clap = { version = "3.1.18", features = [ "derive" ] }
graphql_client = { version = "0.10", features = [ "reqwest-blocking" ] }
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.6"
reqwest = { version = "0.11.10", features = [ "json", "blocking" ] }
rss = "2.0.1"
serde = "1.0"
serde_json = "1.0.81"
tempfile = "3.3.0"
