[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres"] }
sqlx= { version = "0.7", default-features = false, features = ["macros", "migrate"] }
store = { version = "0.1.0", path = "../store" }

[dev-dependencies]
sqlx = "0.7"
tempfile = "3.8.1"
