[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
graphql_client = "0.13.0"
reqwest = "0.11.22"
store = { version = "0.1.0", path = "../store" }
tokio = { version = "1.34.0", features = ["process", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
util = { version = "0.1.0", path = "../util" }
