[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
futures = "0.3.29"
graphql_client = { version = "0.13.0", features = ["reqwest"] }
log = "0.4"
reqwest = "0.11.22"
serde = "1.0.193"
store = { version = "0.1.0", path = "../store" }
tokio = { version = "1.34.0", features = ["process", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
util = { version = "0.1.0", path = "../util" }
