[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
gix = { version = "0.56.0", features = ["async-network-client", "async-network-client-async-std"] }
graphql_client = { version = "0.13.0", features = ["reqwest"] }
log = "0.4"
reqwest = "0.11.22"
serde = "1.0.193"
store = { version = "0.1.0", path = "../store" }
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["process", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
util = { version = "0.1.0", path = "../util" }
