[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = ["from"] }
futures = "0.3.29"
getset = "0.1.2"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
