[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
futures = "0.3.29"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["process", "macros", "rt", "rt-multi-thread"] }
